--- a/manifest.json
+++ b/manifest.json
@@ -7,19 +7,19 @@
   "theme_color": "#2c3e50",
   "icons": [
     {
-      "src": "assets/Leão.png",
+      "src": "assets/backgroud.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "assets/Leão.png",
+      "src": "assets/backgroud.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "assets/Leão.png",
+      "src": "assets/backgroud.png",
       "sizes": "679x679",
       "type": "image/png",
       "purpose": "any maskable"
